<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertCustomerDataActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textViewLabelInfoCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/textview_laber_info_customer"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/edittext_hint_namesurnamecustomer"
                android:ems="10"
                android:hint="@string/edittext_hint_namesurnamecustomer"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="@string/edittext_hint_addresscustomer"
                    android:ems="10"
                    android:hint="@string/edittext_hint_addresscustomer"
                    android:inputType="textPostalAddress"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/buttonLocate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonLocate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/button_locate"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/edittext_hint_citycustomer"
                android:ems="10"
                android:hint="@string/edittext_hint_citycustomer"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextCap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/edittext_hint_capcustomer"
                android:ems="10"
                android:hint="@string/edittext_hint_capcustomer"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/edittext_hint_provincecustomer"
                android:ems="10"
                android:hint="@string/edittext_hint_provincecustomer"
                android:inputType="textShortMessage"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/edittext_hint_phonecustomer"
                android:ems="10"
                android:hint="@string/edittext_hint_phonecustomer"
                android:inputType="phone"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/button_conferma" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>