<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PathDeliveryActivity">

    <TextView
        android:id="@+id/textViewLabelPathDelivery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textview_label_pathdelivery"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPathDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_pathdelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddressDelivery" />

    <EditText
        android:id="@+id/editTextAddressDelivery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/edittext_hint_pathdelivery"
        android:ems="10"
        android:hint="@string/edittext_hint_pathdelivery"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/textViewLabelPathDelivery"
        app:layout_constraintStart_toStartOf="@+id/textViewLabelPathDelivery"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelPathDelivery" />
</androidx.constraintlayout.widget.ConstraintLayout>